Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-1868

TSREMAP_NO_REMAP_STOP/TSREMAP_DID_REMAP_STOP do not stop remap plugin evaluation chain

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 3.3.4
    • Remap API
    • None

    Description

      I have several remap plugins that I want to combine in a single remap rule. According to the doc, I can chain them in remap.config and if one remap plugin return TSREMAP_NO_REMAP_STOP or TSREMAP_DID_REMAP_STOP, the evaluation chain will be broken (no further plugin down the chain gets to run).

      However, I have found out that this is not the case. All remap plugins in the chain will run regardless of plugins' return code. The only time I see it breaks the chain is if a plugin specifies that it wants to return a redirection response to the mapped url.

      Attachments

        1. remap.config
          8 kB
          Thach Tran
        2. remap1.c
          2 kB
          Thach Tran
        3. remap2.c
          2 kB
          Thach Tran
        4. ts_1868.diff
          2 kB
          Thach Tran

        Issue Links

          Activity

            People

              jamespeach James Peach
              thachtran Thach Tran
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: